--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.amazonaws:aws-android-sdk-core:2.3.3'
     compile 'com.amazonaws:aws-android-sdk-s3:2.3.3'
     compile 'com.amazonaws:aws-android-sdk-cognito:2.3.3'
