--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.model.application'
 
 model {
     android {
-        compileSdkVersion 24
+        compileSdkVersion 25
         buildToolsVersion "25.0.0"
 
         defaultConfig {
             applicationId "com.mymensor"
             minSdkVersion.apiLevel 19
-            targetSdkVersion.apiLevel 24
+            targetSdkVersion.apiLevel 25
             versionCode 1
             versionName "1.0"
 
@@ -66,8 +66,9 @@ model {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:support-compat:25.1.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.amazonaws:aws-android-sdk-core:2.3.3'
