--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
         android:largeHeap="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -50,12 +50,12 @@
         </activity>
         <activity
             android:name=".ImageCapActivity"
-            android:theme="@style/SnackbarTheme"
+            android:theme="@style/Theme.AppCompat.Light"
             android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".ConfigActivity"
-            android:theme="@style/SnackbarTheme"
+            android:theme="@style/Theme.AppCompat.Light"
             android:screenOrientation="landscape">
         </activity>
         <service
