--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mymensor"
+    package="com.mymensorar"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -27,7 +27,7 @@
         android:largeHeap="true"
         android:theme="@style/Theme.AppCompat.Light">
         <activity
-            android:name=".MainActivity"
+            android:name="com.mymensor.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -36,11 +36,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MymAccAuthenticatorActivity"
+            android:name="com.mymensor.MymAccAuthenticatorActivity"
             >
         </activity>
         <activity
-            android:name=".LoaderActivity"
+            android:name="com.mymensor.LoaderActivity"
             android:theme="@style/SnackbarTheme"
             >
             <intent-filter>
@@ -49,19 +49,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ImageCapActivity"
+            android:name="com.mymensor.ImageCapActivity"
             android:theme="@style/Theme.AppCompat.Light"
             android:screenOrientation="landscape">
         </activity>
         <activity
-            android:name=".ConfigActivity"
+            android:name="com.mymensor.ConfigActivity"
             android:theme="@style/Theme.AppCompat.Light"
             android:screenOrientation="landscape">
         </activity>
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
             android:enabled="true" />
-        <service android:name=".MymAuthenticatorService">
+        <service android:name="com.mymensor.MymAuthenticatorService">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
