--- a/opencvjava/build.gradle
+++ b/opencvjava/build.gradle
@@ -1,19 +1,18 @@
-apply plugin: 'com.android.model.library'
+apply plugin: 'com.android.library'
 
-model {
-    android {
-        compileSdkVersion 24
-        buildToolsVersion "25.0.0"
+android {
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
-        defaultConfig {
-            minSdkVersion.apiLevel 19
-            targetSdkVersion.apiLevel 24
-        }
+    defaultConfig {
+        minSdkVersion 19
+        targetSdkVersion 25
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles.add(file("proguard-rules.pro"))
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 }
