--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.mymensor'
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 10006
-        versionName "1.06"
+        versionCode 10007
+        versionName "1.07"
 
         externalNativeBuild {
             cmake {
@@ -88,6 +88,7 @@ dependencies {
     compile 'com.android.support:support-compat:25.3.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
     compile 'com.amazonaws:aws-android-sdk-core:2.4.2'
     compile 'com.amazonaws:aws-android-sdk-s3:2.4.2'
     compile 'com.amazonaws:aws-android-sdk-cognito:2.4.2'
